--- a/src/main/resources/templates/admin/verification_detail.html
+++ b/src/main/resources/templates/admin/verification_detail.html
@@ -22,6 +22,8 @@
                 <h5 class="card-title">Request Details</h5>
 
                 <p><strong>Intern ID:</strong> <span th:text="${verification.internId}"></span></p>
+<!--                <p><strong>Intern Name:</strong> <span th:text="${verification.internName}"></span></p>-->
+<!--                <p><strong>Intern Contact:</strong> <span th:text="${verification.internContact}"></span></p>-->
                 <p><strong>Company Name:</strong> <span th:text="${verification.companyName}"></span></p>
                 <p><strong>Email:</strong> <span th:text="${verification.email}"></span></p>
 
