--- a/src/main/resources/templates/admin/thesis_form.html
+++ b/src/main/resources/templates/admin/thesis_form.html
@@ -147,7 +147,7 @@
                 <div class="col-md-6">
                   <div class="form-floating">
                     <input type="date" th:field="*{actualReturnDate}" class="form-control" id="actualReturnDate" placeholder="Actual Return Date">
-                    <label for="actualReturnDate">Actual Return Date</label>
+                    <label for="actualReturnDate">Temporary Actual Return Date</label>
                   </div>
                 </div>
                   <div class="col-md-6">
