--- a/src/main/resources/templates/admin/relieving_records_detail.html
+++ b/src/main/resources/templates/admin/relieving_records_detail.html
@@ -56,7 +56,7 @@
 
 <main id="main" class="main">
   <div class="pagetitle">
-    <h1>Relieving Record Details - <span th:text="${records.get().internId}"></h1>
+    <h1>Relieving Record Details - <span th:text="${records.get().firstName}"></h1>
   </div>
 
   <div th:if="${records.isPresent()}">
@@ -65,6 +65,14 @@
       <tr>
         <th>Intern ID</th>
         <td th:text="${records.get().internId}"></td>
+      </tr>
+      <tr>
+        <th>Intern Name</th>
+        <td th:text="${records.get().firstName}"></td>
+      </tr>
+      <tr>
+        <th>Group ID</th>
+        <td th:text="${records.get().groupId}"></td>
       </tr>
       <tr>
         <th>Institute/University Name</th>
