--- a/src/main/resources/templates/fragments/guideAsideFragment.html
+++ b/src/main/resources/templates/fragments/guideAsideFragment.html
@@ -84,7 +84,21 @@
 								<i class="bi bi-circle"></i><span>Pending Definitions</span>
 						</a></li>
 					</ul></li>
-			</ul> <!-- Vendor JS Files --> <script
+			</ul>
+
+			<ul class="sidebar-nav" id="def-nav">
+				<li class="nav-item"><a class="nav-link collapsed"
+										data-bs-target="#leave-def-nav" data-bs-toggle="collapse"
+										href="#"> <i class="bi bi-menu-button-wide"></i><span>Leave Application</span><i class="bi bi-chevron-down ms-auto"></i>
+				</a>
+					<ul id="leave-def-nav" class="nav-content collapse "
+						data-bs-parent="#guide-nav">
+						<li><a th:href="@{/bisag/guide/pending_leaves}">
+							<i class="bi bi-circle"></i><span>Pending Applications</span>
+						</a></li>
+					</ul></li>
+			</ul>
+			<!-- Vendor JS Files --> <script
 				th:src="@{/assets/vendor/apexcharts/apexcharts.min.js}"></script> <script
 				th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 			<script th:src="@{/assets/vendor/chart.js/chart.umd.js}"></script> <script
