--- a/src/main/resources/templates/fragments/headerFragment.html
+++ b/src/main/resources/templates/fragments/headerFragment.html
@@ -62,6 +62,22 @@
 							th:text="${requestedCancellationsCount}"></span>
 							</span>
 					</a></li>
+
+					<li><a class="dropdown-item d-flex align-items-center"
+						   th:href="@{/bisag/admin/pending_leaves}"> <i class="fa fa-times"
+																			   aria-hidden="true"></i> <span>Pending Leave Requests <span
+							th:if="${pendingLeaveApplicationsCount > 0}" class="notif"
+							th:text="${pendingLeaveApplicationsCount}"></span>
+							</span>
+					</a></li>
+
+					<li><a class="dropdown-item d-flex align-items-center"
+						   th:href="@{/bisag/admin/verification_requests}"> <i class="fa fa-times"
+																		aria-hidden="true"></i> <span>Pending Verification Requests <span
+							th:if="${pendingVerificationRequestsCount > 0}" class="notif"
+							th:text="${pendingVerificationRequestsCount}"></span>
+							</span>
+					</a></li>
 				</ul>
 			</li>
 
