--- a/src/main/resources/templates/admin/relieving_records.html
+++ b/src/main/resources/templates/admin/relieving_records.html
@@ -379,6 +379,11 @@
                             }
                         });
                     </script>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 
 </html>
